--- a/FlexboxProperties/index.css
+++ b/FlexboxProperties/index.css
@@ -10,7 +10,6 @@
 
 display: flex;
 
-justify-content: center;
 
 
 
@@ -19,10 +18,14 @@ justify-content: center;
 
 .item{
 
-    background-color: pink;
-    padding: 20px;
-    margin-right:20px ;
-  
+    background-color: orange;
+    padding: 25px;
+    margin:25px ;
+    border-radius: 10px;
+    color:white;
+    font-size: 25px;
+    font-weight: bold;
+    
    
 }
 
