--- a/FlexboxProperties/index.css
+++ b/FlexboxProperties/index.css
@@ -62,7 +62,10 @@ height: 100vh;
 
 
 .container3{
-
+display: flex;
+flex-direction: column;
+justify-content: flex-end;
+align-items: flex-end;
 background-color:blueviolet;
 padding: 10px;
 height: 100vh;
@@ -79,5 +82,24 @@ height: 100vh;
     font-size: 20px;
     font-weight: bold;
     text-align: center;
+
+}
+
+.container4{
+display: flex;
+flex-wrap: wrap;
+align-items: center;
+background-color: sandybrown;
+height: 100vh;
+
+
+}
+
+.contain{
+
+width: 200px;
+height: 200px;
+background-color: darkgreen;
+margin: 10px;
 
 }
