--- a/FlexboxLayout/index.css
+++ b/FlexboxLayout/index.css
@@ -18,7 +18,7 @@ flex: 0 70%;
 display: flex;
 justify-content: space-between;
 flex-direction: column;
-height: 100vh;
+height: 1020px;
 background-color: white;
 
 
@@ -56,6 +56,7 @@ align-items:center ;
 flex: 0 87%;
 
 display: flex;
+
 
 
 
@@ -101,27 +102,98 @@ align-items: center;
     background-color: rgb(248, 193, 202);
 
     display: flex;
-    justify-content: space-around;
     flex-direction: column;
+    justify-content: space-around;
 
 }
 
 
 .cards{
 
+flex: 0 20%;
 
+
+display: flex;
+justify-content: space-between;
+
+
+}
+
+.card{
+
+    background-color: rgb(48, 135, 141);
+    flex: 0 20%;
+    border-radius: 5px;  
+    height: 250px;   
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+ 
+}
+
+.card p{
+
+font-weight: bold;
 
 }
 
 
 .boxes{
 
+    flex: 0 45%;
+    color: black;
+     height: 600px;
+
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row-reverse;
+
+
+}
+
+.box{
+
+    background-color: rgb(97, 196, 196);
+    flex: 0 20%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.box:nth-child(3){
+
+    order: 1;
 
 
 }
 
 .images{
 
-
+    flex: 0 15%;
     
+
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+}
+
+.image{
+
+background-color: purple;
+flex: 0 20%;
+height: 170px;
+
+
+
+}
+
+.images:nth-child(1),:nth-child(3){
+
+
+
 }
