--- a/FlexboxLayout/index.css
+++ b/FlexboxLayout/index.css
@@ -18,7 +18,7 @@ flex: 0 70%;
 display: flex;
 justify-content: space-between;
 flex-direction: column;
-height: 1020px;
+height: 100vh;
 background-color: white;
 
 
@@ -105,6 +105,7 @@ align-items: center;
     flex-direction: column;
     justify-content: space-around;
 
+
 }
 
 
@@ -114,7 +115,7 @@ flex: 0 20%;
 
 
 display: flex;
-justify-content: space-between;
+justify-content: space-around;
 
 
 }
@@ -124,7 +125,7 @@ justify-content: space-between;
     background-color: rgb(48, 135, 141);
     flex: 0 20%;
     border-radius: 5px;  
-    height: 250px;   
+    height: 200px;   
 
     display: flex;
     flex-direction: column;
@@ -156,6 +157,7 @@ font-weight: bold;
 
     background-color: rgb(97, 196, 196);
     flex: 0 20%;
+    height: 350px;
 
     display: flex;
     justify-content: center;
@@ -178,7 +180,15 @@ font-weight: bold;
 
     display: flex;
     justify-content: space-around;
-    align-items: center;
+
+
+}
+
+.image:nth-child(1),.image:nth-child(3){
+
+
+align-self: flex-end;
+
 
 }
 
@@ -186,14 +196,13 @@ font-weight: bold;
 
 background-color: purple;
 flex: 0 20%;
-height: 170px;
+height: 100px;
 
-
-
-}
-
-.images:nth-child(1),:nth-child(3){
-
-
+display: flex;
+justify-content: center;
+align-items: center;
 
 }
+
+
+
