--- a/SignUpPage/index.css
+++ b/SignUpPage/index.css
@@ -8,7 +8,7 @@
 body{
 
 background-color:#eee9e9;
-font-family: 'Raleway', sans-serif;
+font-family: 'Roboto', sans-serif;
 color: white;
 font-size: 17px;
 height: 100vh;
@@ -51,7 +51,7 @@ align-items: center;
 .left-content{
 
   width:350px;
-  height: 280px;
+  height: 250px;
 
 
     display: flex;
@@ -102,8 +102,8 @@ align-items: center;
 
 .right-content{
 
-flex: 0 45%;
-height: 75%;
+flex: 0 46%;
+height: 70%;
 
 
 display: flex;
@@ -120,14 +120,81 @@ align-items: center;
 
     color: #3BB397;
     font-size: 40px;
+    font-weight: 900;
 }
 
 .links{
 
     color:black;
+    width:50% ;
+
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
 }
+
+.image{
+
+  width: 30px;
+  height: 30px;
+  border:1px solid #f0eded;
+  border-radius: 50%;
+  padding: 10px 10px;;
+
+}
+
+
 
 .right-content >p{
 
-    color: black;
+    color: #a2a2a2;
+   
 }
+
+.form{
+
+flex:0 50%;
+
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+align-items: center;
+
+}
+
+.form-group{
+
+ position: relative;
+
+}
+.input{
+
+padding: 20px 35px ;
+width: 100%;
+background-color:rgb(248, 244, 244);
+border: none;
+
+}
+
+.input::placeholder{
+
+    color: #a2a2a2;
+    font-size: 16px;
+}
+
+.button{
+
+    background-color: #3BB397;
+    color:white;
+    text-decoration: none;
+    padding:15px 85px;
+    border:1px solid white;
+    border-radius: 30px;
+    font-size: 18px;
+
+     
+
+}
+
