--- a/SignUpPage/index.css
+++ b/SignUpPage/index.css
@@ -169,10 +169,21 @@ align-items: center;
  position: relative;
 
 }
+
+
+.form-group img{
+    
+ position: absolute;
+ width: 20px;
+ height: 18px;
+ fill:#a2a2a2;
+ transform: translate(50%,85%);
+
+}
 .input{
 
 padding: 20px 35px ;
-width: 100%;
+width: 250px;
 background-color:rgb(248, 244, 244);
 border: none;
 
